<resources>
    <string name="app_name">My Application</string>
    <string name="logo_name">Payet.kz</string>
    <string name="signin_btn">Sign In</string>
    <string name="signup_btn">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logout_mail">Email</string>
    <string name="logout_btn">(Log Out)</string>
</resources>